secrets removed